--- a/extension/popup/css/custom-dropdown.css
+++ b/extension/popup/css/custom-dropdown.css
@@ -16,14 +16,15 @@
     padding: 0 8px;
     height: 100%;
     border-radius: 6px;
-    background: #242424;
+    background: var(--bg-primary-dark);
     color: #FAFAFA;
-    font-size: 11px;
+    font-size: var(--font-body);
     transition: background-color 0.2s;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
 
 .theme-dark .selected-option {
     border: 1px solid var(--border-primary-dark);
@@ -34,7 +35,15 @@
 }
 
 .custom-dropdown:hover .selected-option {
-    background: #2c2c2c;
+    background: var(--bg-primary-dark-hover);
+}
+
+.custom-dropdown.open .selected-option {
+    background-color: var(--bg-selected-dark);
+}
+
+.custom-dropdown.open .selected-option:hover  {
+    background-color: var(--bg-selected-dark-hover);
 }
 
 .custom-dropdown.open .dropdown-icon svg {
@@ -57,6 +66,7 @@
     margin-top: 1px;
     background: #2c2c2c;
     border-radius: 6px;
+    border: 1px solid var(--border-primary-dark);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     z-index: 100;
     max-height: 0;
@@ -64,7 +74,7 @@
     transition: all 0.3s;
     opacity: 0;
     visibility: hidden;
-    width: 280px;
+    width: 282px;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
@@ -77,8 +87,8 @@
 
 /* DASH specific dropdown style */
 .video-item [data-type="dash"] .options-container {
-    width: 388px; /* Width for DASH dropdowns */
-    left: -108px; /* Center it */
+    width: calc(420px - 16px); /* Width for DASH dropdowns */
+    left: -115px; /* Center it */
 }
 
 /* Style for positioning wider options container */
@@ -90,7 +100,7 @@
 .dropdown-option {
     padding: 8px;
     color: var(--text-secondary-dark);
-    font-size: 11px;
+    font-size: var(--font-body);
     transition: background-color 0.1s;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -99,15 +109,18 @@
 
 
 .dropdown-option.selected {
-    background: #3a3a3a;
-    color: #FAFAFA;
+    background: var(--bg-selected-dark);
+    color: var(--text-primary-dark);
 }
 
 .dropdown-option:not(.selected):hover {
     position: relative;
-    color: var(--text-secondary-dark-hover);
-    background: #3a3a3a;
-    box-shadow: 0 0 0 1px #1976D2;
+    color: var(--text-primary-dark);
+    background: var(--bg-selected-dark);
+}
+
+.dropdown-option.selected:hover {
+    background: var(--bg-selected-dark-hover);
 }
 
 /* Progress styling for dropdown options during download */
@@ -161,11 +174,11 @@
 }
 
 .column-title {
-    font-size: 11px;
+    color: var(--text-primary-dark);
+    font-size: var(--font-h2);
     font-weight: 500;
-    color: #FAFAFA;
-    padding: 0 4px 4px;
-    border-bottom: 1px solid #3a3a3a;
+    padding-bottom: 4px;
+    border-bottom: 1px solid var(--border-primary-dark);
     margin-bottom: 4px;
 }
 
@@ -173,7 +186,7 @@
     display: flex;
     align-items: center;
     padding: 6px 4px;
-    font-size: 11px;
+    font-size: var(--font-body);
     color: var(--text-secondary-dark);
     cursor: pointer;
     transition: background-color 0.1s;
@@ -185,13 +198,17 @@
     min-width: 100%;
     width: fit-content;
     color: var(--text-secondary-dark-hover);
-    background: #3a3a3a;
-    box-shadow: 0 0 0 1px #1976D2;
+    background: var(--bg-selected-dark);
+    box-shadow: 0 0 0 1px var(--color-primary);
 }
 
 .track-option.selected {
-    background: #3a3a3a;
-    color: #FAFAFA;
+    background: var(--bg-selected-dark);
+    color: var(--text-primary-dark);
+}
+
+.track-option.selected:hover {
+    background: var(--bg-selected-dark-hover);
 }
 
 .track-option input {
@@ -223,7 +240,7 @@
     color: white;
     border: none;
     border-radius: 6px;
-    font-size: 13px;
+    font-size: var(--font-h2);
     cursor: pointer;
     transition: background-color 0.2s;
 }
