--- a/extension/popup/css/layout.css
+++ b/extension/popup/css/layout.css
@@ -16,7 +16,7 @@
     justify-content: center;
     height: 100px;
     text-align: center;
-    font-size: 14px;
+    font-size: var(--font-h2);
     padding: 16px;
 }
 
@@ -89,10 +89,10 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
     .clear-cache-button {
         padding: 4px 6px;
-        font-size: 11px;
+        font-size: var(--font-body);
     }
     
     .clear-cache-button svg {
