--- a/extension/popup/css/variables.css
+++ b/extension/popup/css/variables.css
@@ -29,7 +29,7 @@
 
     --text-primary-dark: #FAFAFA;
     --text-secondary-dark: #999;
-    --text-secondary-dark-hover: #999;
+    --text-secondary-dark-hover: #FAFAFA;
 
     /* Light Theme */
     --bg-primary-light: #f5f5f5;
