--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -32,7 +32,7 @@
 
     --text-primary-dark: #FAFAFA;
     --text-secondary-dark: #999;
-    --text-secondary-dark-hover: #999;
+    --text-secondary-dark-hover: #FAFAFA;
 
     /* Light Theme */
     --bg-primary-light: #f5f5f5;
@@ -384,7 +384,7 @@ body.theme-light {
 }
 
 /* Copy button */
-.copy-button {
+.dismiss-button {
     background: none;
     border: none;
     padding: 3px;
@@ -393,36 +393,20 @@ body.theme-light {
     position: relative;
 }
 
-.theme-dark .copy-button {
-    color: #aaa;
+.theme-dark .dismiss-button path {
+    fill: var(--text-secondary-dark);
 }
 
-.theme-light .copy-button {
-    color: #757575;
+.theme-dark .dismiss-button:hover path {
+    fill: var(--text-secondary-dark-hover);
 }
 
-.theme-dark .copy-button:hover {
-    color: white;
+.theme-light .dismiss-button path {
+    fill: var(--text-secondary-light);
 }
 
-.theme-light .copy-button:hover {
-    color: #333;
-}
-
-.theme-dark .copy-button svg {
-    fill: #aaa;
-}
-
-.theme-light .copy-button svg {
-    fill: #757575;
-}
-
-.theme-dark .copy-button:hover svg {
-    fill: white;
-}
-
-.theme-light .copy-button:hover svg {
-    fill: #333;
+.theme-light .dismiss-button:hover path {
+    fill: var(--text-secondary-light-hover);
 }
 
 /* Download button group */
